--- a/host1/docker/Dockerfile
+++ b/host1/docker/Dockerfile
@@ -3,6 +3,15 @@ FROM php:7.3.4-apache
 RUN apt-get update && \
     apt-get install -y \
         git
+
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN docker-php-ext-install sockets 
-RUN docker-php-ext-install bcmath
+
+RUN docker-php-ext-install \
+        sockets \
+        bcmath
+
+WORKDIR /var/www/host1
+COPY ./composer.json .
+COPY ./composer.lock .
+#RUN composer require php-amqplib/php-amqplib
+RUN composer install
