--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
             - ./host1/src:/var/www/host1
             - ./host1/docker/php.ini:/usr/local/etc/php/conf.d/custom.ini
             - ./host1/docker/apache_host1.conf:/etc/apache2/sites-enabled/host1.conf
-     host2:
+    host2:
         container_name: host2
+        build: ./host2/docker
         ports:
             - 3002:3002
         volumes:
