--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.5'
 services:
     host_rmq:
         image: rabbitmq:3.7.14-management
+        container_name: host_rmq
         ports:
             - 5672:5672
             - 15672:15672
@@ -18,6 +19,6 @@ services:
         container_name: host2
         build: ./host2/docker
         ports:
-            - 3002:3002
+            - 3002:80
         volumes:
-            - ./hosts2/src/server:/usr/src/app
+            - ./host2/src/server:/src/server
