add host2 rabbit consumer and producer

--- a/host2/docker/Dockerfile
+++ b/host2/docker/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /src
 COPY ./package.json /src/package.json
 COPY ./package-lock.json /src/package-lock.json
 
+RUN npm install amqplib
 RUN npm install
 
 CMD ["node", "server/index.js"]
