--- a/host2/docker/package.json
+++ b/host2/docker/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "src",
+  "name": "ex_rabbit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.5.3",
     "express": "^4.16.4"
   }
 }
