--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,27 @@
 version: '3.5'
 services:
+    # RabbitMQ
     host_rmq:
         image: rabbitmq:3.7.14-management
         container_name: host_rmq
         ports:
+            # RabbitMQ server
             - 5672:5672
+            # RabbitMQ web site management http://localhost:15672 (guest:guest)
             - 15672:15672
+    # PHP
     host1:
         container_name: host1
         build: ./host1/docker
         ports:
+            # web page http://localhost:3001
             - 3001:80
         volumes:
             - ./host1/src:/var/www/host1
             - ./host1/docker/php.ini:/usr/local/etc/php/conf.d/custom.ini
             - ./host1/docker/apache_host1.conf:/etc/apache2/sites-enabled/host1.conf
+        depends_on:
+            - host_rmq
         environment:
             - DB_HOST=http://host2
             - DB_PORT=3000
@@ -24,12 +31,17 @@ services:
             - MQ_USER=guest
             - MQ_PASSWORD=guest
             - HOST=host1
+    # NodeJS
     host2:
         container_name: host2
         build: ./host2/docker
         ports:
+            # db web page http://localhost:3002
             - 3002:80
+            # db json server http://localhost:3012
             - 3012:3000
+        depends_on:
+            - host_rmq
         environment:
             - WEB_PORT=80
             - WEB_HOST=0.0.0.0
