--- a/host1/docker/apache_host1.conf
+++ b/host1/docker/apache_host1.conf
@@ -2,6 +2,7 @@
         DocumentRoot /var/www/host1/www
         ServerName ex_rabbit.host1
         ServerAlias host1
+        ServerAlias localhost
         SetEnv SYS_ENVIRONMENT development
         SetEnv SYS_USER gheryd
         LimitInternalRecursion 40
