--- a/host_php/docker/apache_host_php.conf
+++ b/host_php/docker/apache_host_php.conf
@@ -1,18 +1,18 @@
 <VirtualHost *:80>
-        DocumentRoot /var/www/host1/www
-        ServerName ex_rabbit.host1
-        ServerAlias host1
+        DocumentRoot /var/www/host_php/www
+        ServerName ex_rabbit.host_php
+        ServerAlias host_php
         ServerAlias localhost
         SetEnv SYS_ENVIRONMENT development
         SetEnv SYS_USER gheryd
         LimitInternalRecursion 40
-        <Directory "/var/www/host1/www">
+        <Directory "/var/www/host_php/www">
                 Options Includes FollowSymLinks MultiViews Indexes
                 AllowOverride All
                 Order allow,deny
                 Allow from all
         </Directory>
         #RewriteEngine on
-        ErrorLog /var/log/apache2/host1_error.log
-        CustomLog /var/log/apache2/host1_access.log common
+        ErrorLog /var/log/apache2/host_php_error.log
+        CustomLog /var/log/apache2/host_php_access.log common
 </VirtualHost>
