--- a/host_nodejs/docker/package.json
+++ b/host_nodejs/docker/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.3",
-    "axios": "^0.18.0",
+    "redis": "^2.8.0",
     "express": "^4.16.4"
   }
 }
