--- a/host_php/docker/apache_host_php.conf
+++ b/host_php/docker/apache_host_php.conf
@@ -1,12 +1,12 @@
 <VirtualHost *:80>
-        DocumentRoot /var/www/host_php/www
+        DocumentRoot /var/www/host_php/src/www
         ServerName ex_rabbit.host_php
         ServerAlias host_php
         ServerAlias localhost
         SetEnv SYS_ENVIRONMENT development
         SetEnv SYS_USER gheryd
         LimitInternalRecursion 40
-        <Directory "/var/www/host_php/www">
+        <Directory "/var/www/host_php/src/www">
                 Options Includes FollowSymLinks MultiViews Indexes
                 AllowOverride All
                 Order allow,deny
