--- a/host_nodejs/docker/Dockerfile
+++ b/host_nodejs/docker/Dockerfile
@@ -6,7 +6,6 @@ WORKDIR /app
 COPY ./package.json /app/package.json
 COPY ./package-lock.json /app/package-lock.json
 
-RUN npm install -g nodemon && \
-    npm i
+RUN npm install -g nodemon && npm i
 
 CMD ["nodemon", "server/index.js"]
