--- a/host_nodejs/docker/package.json
+++ b/host_nodejs/docker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ex_rabbit",
+  "name": "test_node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.3",
-    "redis": "^2.8.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "redis": "^2.8.0"
   }
 }
