--- a/host_php/docker/composer.json
+++ b/host_php/docker/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
-        "php-amqplib/php-amqplib": "^2.9"
+        "php-amqplib/php-amqplib": "^2.9",
+        "predis/predis": "^1.1.0"
     }
 }
